<resources>
    <string name="app_name">Foodie</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="lottery">Lotto</string>
    <string name="like">Liked</string>
    <string name="title_activity_maps">Map</string>
    <string name="AppWorks">AppWorks School</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="cannot_be_empty">cannot be empty</string>
    <string name="name">Name</string>
    <string name="say_something">留言...</string>
    <string name="restaurant_name">店名</string>
    <string name="location">位置</string>
    <string name="what_did_you_eat">你吃了什麼</string>
    <string name="price">價格</string>
    <string name="post">發文</string>
    <string name="sure">確定</string>
    <string name="cancel">取消</string>
    <string name="at_least_one">至少要寫一項!</string>
    <string name="too_much">你吃太多囉!!!!</string>
    <string name="tourist_article">遊客文章</string>
    <string name="today_recommend">本日推薦</string>
    <string name="author">作者 :</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="address">110台灣台北市信義區基隆路一段178號</string>
    <string name="like_preview">加入收藏的文章會放在這裡, 方便隨時瀏覽!</string>
    <string name="menu">菜單</string>
    <string name="content">內容</string>
    <string name="content_hint">今天來到了XXX餐館...</string>
    <string name="time_preview">2018 年 10月26日 15:06</string>
    <string name="pictures">照片</string>
    <string name="rate">評分</string>
    <string name="zero">0</string>
    <string name="recommend_first">本</string>
    <string name="recommend_second">日</string>
    <string name="recommend_third">精</string>
    <string name="recommend_forth">選</string>
    <string name="guanhong">GuanHong</string>
    <string name="i_want_post">我要評論</string>
    <string name="cannot_find_address">查無地址</string>
    <string name="map_cannot_connect">Google地圖無法連接</string>
    <string name="no_map_sevice">沒有地圖服務</string>
    <string name="please_open_gps">請開啟定位</string>
    <string name="password_cannot_less_than_six">密碼不能小於六碼!</string>
    <string name="email_pattern_wrong">Email 格式錯誤!</string>
    <string name="login_fail">登入失敗!</string>
    <string name="register_success">註冊成功</string>
    <string name="account_already_exist">該用戶已存在</string>
    <string name="add_to_like">已加入我的收藏</string>
    <string name="remove_from_like">已從我的收藏移除</string>
    <string name="restaurant_name_cannot_be_empty">店名必填!</string>
    <string name="restaurant_name_cannot_contain_empty">店名不能有空白!</string>
    <string name="location_cannot_be_empty">位置必填!</string>
    <string name="dish_name_cannot_be_empty">菜名必填!</string>
    <string name="dish_name_cannot_contain_empty">菜單不能有空白!</string>
    <string name="dish_price_cannot_be_empty">價格必填!</string>
    <string name="at_least_one_photo">至少要有一張照片!</string>
    <string name="content_cannot_be_empty">內容必填!</string>
    <string name="register_fail">註冊失敗</string>
    <string name="email_cannot_be_empty">信箱不能為空</string>
    <string name="password_cannot_be_empty">密碼不能為空</string>
    <string name="name_cannot_be_empty">名字不能為空</string>
    <string name="profile_preview">沒有任何文章，快來發一篇吧!</string>
    <string name="search_preview">把關鍵字輸入方框內，按下放大鏡</string>


</resources>
