<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView

            android:id="@+id/textView_personal_restaurant_name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:text="@string/AppWorks"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toStartOf="@+id/textView_personal_createdTime"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview_personal_photo" />


        <TextView
            android:id="@+id/textview_personal_restaurant_location"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/address"
            android:textSize="12dp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView_star1"
            app:layout_constraintTop_toBottomOf="@+id/imageView_star1" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:background="#e7e7e7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_personal_restaurant_location" />

        <TextView
            android:id="@+id/textView_menu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/menu"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/textView_personal_menu1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/what_did_you_eat"
            android:textSize="12dp"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="@+id/textView_menu1"
            app:layout_constraintTop_toBottomOf="@+id/textView_menu1" />

        <TextView
            android:id="@+id/textView_personal_price1"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="8dp"
            android:hint="@string/price"
            android:maxLength="6"
            android:textSize="12dp"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="@+id/textView_personal_menu1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.008"
            app:layout_constraintStart_toEndOf="@+id/textView_personal_menu1"
            app:layout_constraintTop_toTopOf="@+id/textView_personal_menu1"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/textView_personal_menu2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/what_did_you_eat"
            android:textSize="12dp"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="@+id/textView_personal_menu1"
            app:layout_constraintTop_toBottomOf="@+id/textView_personal_menu1" />

        <TextView
            android:id="@+id/textView_personal_price2"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:maxLength="6"
            android:textSize="12dp"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="@+id/textView_personal_menu2"
            app:layout_constraintEnd_toEndOf="@+id/textView_personal_price1"
            app:layout_constraintTop_toTopOf="@+id/textView_personal_menu2" />


        <TextView
            android:id="@+id/textView_personal_menu3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/what_did_you_eat"
            android:textSize="12dp"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="@+id/textView_personal_menu2"
            app:layout_constraintTop_toBottomOf="@+id/textView_personal_menu2" />

        <TextView
            android:id="@+id/textView_personal_price3"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:maxLength="6"
            android:textSize="12dp"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="@+id/textView_personal_menu3"
            app:layout_constraintEnd_toEndOf="@+id/textView_personal_price2"
            app:layout_constraintTop_toTopOf="@+id/textView_personal_menu3" />


        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="60dp"
            android:background="#e7e7e7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_personal_menu1" />

        <TextView
            android:id="@+id/textView_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/content"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <TextView
            android:id="@+id/textView_personal_content"
            android:layout_width="0dp"
            android:layout_height="214dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:hint="@string/content_hint"
            android:lineSpacingExtra="4dp"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:textSize="12dp"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_content"
            app:layout_constraintVertical_bias="0.0" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_personal_photo"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.rd.PageIndicatorView
            android:id="@+id/personal_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerview_personal_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:piv_animationType="drop"
            app:piv_dynamicCount="true"
            app:piv_interactiveAnimation="true"
            app:piv_selectedColor="@color/main"
            app:piv_unselectedColor="#a5cdcdcd" />

        <ImageView
            android:id="@+id/imageView_star1"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/new_star_selected"
            app:layout_constraintStart_toStartOf="@+id/textView_personal_restaurant_name"
            app:layout_constraintTop_toBottomOf="@+id/textView_personal_restaurant_name" />

        <ImageView
            android:id="@+id/imageView_star2"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/new_star_selected"
            app:layout_constraintStart_toEndOf="@+id/imageView_star1"
            app:layout_constraintTop_toTopOf="@+id/imageView_star1" />

        <ImageView
            android:id="@+id/imageView_star3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/new_star_selected"
            app:layout_constraintStart_toEndOf="@+id/imageView_star2"
            app:layout_constraintTop_toTopOf="@+id/imageView_star1" />

        <ImageView
            android:id="@+id/imageView_star4"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/new_star_selected"
            app:layout_constraintStart_toEndOf="@+id/imageView_star3"
            app:layout_constraintTop_toTopOf="@+id/imageView_star1" />

        <ImageView
            android:id="@+id/imageView_star5"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/new_star_selected"
            app:layout_constraintStart_toEndOf="@+id/imageView_star4"
            app:layout_constraintTop_toTopOf="@+id/imageView_star1" />

        <TextView
            android:id="@+id/textView_personal_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textSize="12dp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview_personal_photo" />

        <TextView
            android:id="@+id/textView_personal_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/author"
            android:textSize="12dp"
            android:typeface="sans"
            app:layout_constraintEnd_toStartOf="@+id/textView_personal_author_name"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview_personal_photo" />

        <TextView
            android:id="@+id/textView_personal_createdTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/time_preview"
            android:textSize="12dp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_personal_author_name" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>