<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f8f9">

    <ImageView
        android:id="@+id/imageView_recommend_label"
        android:layout_width="122dp"
        android:layout_height="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_restaurant_name"
        app:srcCompat="@drawable/label_right_deep" />


    <TextView
        android:id="@+id/textView_recommend_title_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/recommend_first"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_recommend_label"
        app:layout_constraintStart_toStartOf="@+id/imageView_recommend_label"
        app:layout_constraintTop_toTopOf="@+id/imageView_recommend_label" />

    <TextView
        android:id="@+id/textView_recommend_title_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:text="@string/recommend_second"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:typeface="sans"
        app:layout_constraintStart_toEndOf="@+id/textView_recommend_title_first"
        app:layout_constraintTop_toTopOf="@+id/textView_recommend_title_first" />

    <TextView
        android:id="@+id/textView_recommend_title_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/recommend_third"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:typeface="sans"
        app:layout_constraintStart_toEndOf="@+id/textView_recommend_title_second"
        app:layout_constraintTop_toTopOf="@+id/textView_recommend_title_second" />

    <TextView
        android:id="@+id/textView_recommend_title_forth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/recommend_forth"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:typeface="sans"
        app:layout_constraintStart_toEndOf="@+id/textView_recommend_title_third"
        app:layout_constraintTop_toTopOf="@+id/textView_recommend_title_third" />

    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/textView_restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="醒醒吧你沒有網路"
        android:textColor="#444"
        android:textSize="22dp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_recommend_star1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView_restaurant_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_restaurant_name"
        app:srcCompat="@drawable/new_star_selected" />

    <ImageView
        android:id="@+id/imageView_recommend_star2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/imageView_recommend_star1"
        app:layout_constraintTop_toTopOf="@+id/imageView_recommend_star1"
        app:srcCompat="@drawable/new_star_selected" />

    <ImageView
        android:id="@+id/imageView_recommend_star3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/imageView_recommend_star2"
        app:layout_constraintTop_toTopOf="@+id/imageView_recommend_star2"
        app:srcCompat="@drawable/new_star_selected" />

    <ImageView
        android:id="@+id/imageView_recommend_star4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/imageView_recommend_star3"
        app:layout_constraintTop_toTopOf="@+id/imageView_recommend_star3"
        app:srcCompat="@drawable/new_star_selected" />

    <ImageView
        android:id="@+id/imageView_recommend_star5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/imageView_recommend_star4"
        app:layout_constraintTop_toTopOf="@+id/imageView_recommend_star4"
        app:srcCompat="@drawable/new_star_selected" />


    <TextView
        android:id="@+id/textView_location"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="bottom"
        android:text="@string/address"
        app:layout_constraintBottom_toBottomOf="@+id/divider1"
        app:layout_constraintEnd_toEndOf="@+id/divider1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView_recommend_star1"
        app:layout_constraintTop_toBottomOf="@+id/imageView_recommend_star1" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#e7e7e7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_location" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recommend_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

</android.support.constraint.ConstraintLayout>